# gtk-rs-custom-widget

./: Cargo.toml  glib.diff  gtk.diff
src/: main.rs
